--- a/sass/site/blog/single-post-layouts/_comment-form.scss
+++ b/sass/site/blog/single-post-layouts/_comment-form.scss
@@ -69,13 +69,22 @@
 }
 
 .ast-comment {
-    padding: 1em 0;
+    padding: 2.250em 0 0 0;
+    border-top: 1px solid #eaeaea;
+    position: relative;
+}
+
+.ast-reply-link {
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin-top: 32px;
 }
 
 .ast-comment-avatar-wrap {
     float: left;
     clear: right;
-    margin-right: 1.33333em;
+    margin-right: 2.33333em;
     @media (max-width: $mx-col-md) {
         margin-right: 0.5em;
     }
@@ -95,6 +104,7 @@
 
 .ast-comment-content{
     clear: both;
+    margin-left: 7.33333em;
 }
 
 .ast-comment-cite-wrap {
@@ -198,8 +208,7 @@
             background-color: $color-background-content;
             &.depth-1{
 
-                padding: 4em 6.67em;
-                margin-bottom: 2em;
+                padding: 1.125em 6.67em;
 
                 @media (max-width: $mx-col-xl) {
                     padding: 3em 3.34em;
@@ -242,7 +251,6 @@
         }
         .bypostauthor{
             padding: 2em;
-            margin-bottom: 1em;
             @media (max-width: $mx-col-sm) {
                 padding: .5em;
             }
@@ -257,16 +265,21 @@
             li{
                 background: transparent;
                 margin-bottom: 0;
-                padding: 0 0 0 2em;
+                padding: 0 0 0 2.7em;
                 @media (max-width: $mx-col-sm) {
                     padding: 0 0 0 .5em;
                 }
             }
+            .children {
+                .ast-comment {
+                    margin: 2.250em 0 0 0;
+                }
+            } 
         }
     }
     .comment-respond{
         background-color: $color-background-content;
-        padding: 4em 6.67em;
+        padding: 4.5em 6.67em;
         border-bottom: 0;
         @media (max-width: $mx-col-xl) {
             padding: 3em 2.34em;
